--- a/app/src/main/res/layout/fragment_show_post.xml
+++ b/app/src/main/res/layout/fragment_show_post.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/post_list_scroll"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ShowPostFragment">
+    android:layout_height="match_parent">
+<!--    tools:context=".ShowPostFragment">-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/post_list"
