--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -9,6 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
+        <Button
+            android:id="@+id/News"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
         <TextView
             android:id="@+id/retryTitle"
             android:layout_width="wrap_content"
