--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -13,7 +13,8 @@
             android:id="@+id/News"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Button"
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/retryTitle"
