--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -9,6 +9,38 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/swiperefresh"
+                app:layout_scrollFlags="scroll|snap">
+
+                <com.google.android.material.tabs.TabItem
+                    android:id="@+id/tabNews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/news"
+                    android:visibility="gone"
+                    app:layout_scrollFlags="scroll|snap" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:id="@+id/tabInteresting"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/interesting"
+                    android:visibility="gone"
+                    app:layout_scrollFlags="scroll|snap" />
+
+            </com.google.android.material.tabs.TabLayout>
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/retryTitle"
             android:layout_width="wrap_content"
