--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -13,6 +13,7 @@
             android:id="@+id/appBarLiner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:elevation="1dp"
             android:orientation="horizontal">
 
             <com.google.android.material.tabs.TabLayout
