--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -7,43 +7,39 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/appBarLiner"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
             android:elevation="1dp"
-            android:orientation="horizontal">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|snap">
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabLayout"
-                android:layout_width="match_parent"
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabNews"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@+id/swiperefresh"
-                app:layout_scrollFlags="scroll|snap">
+                android:clickable="true"
+                android:focusable="true"
+                android:text="@string/news"
+                android:visibility="gone"
+                app:layout_scrollFlags="scroll|snap" />
 
-                <com.google.android.material.tabs.TabItem
-                    android:id="@+id/tabNews"
-                    android:clickable="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/news"
-                    android:visibility="gone"
-                    app:layout_scrollFlags="scroll|snap" />
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabInteresting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:text="@string/interesting"
+                android:visibility="gone"
+                app:layout_scrollFlags="scroll|snap" />
 
-                <com.google.android.material.tabs.TabItem
-                    android:id="@+id/tabInteresting"
-                    android:clickable="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/interesting"
-                    android:visibility="gone"
-                    app:layout_scrollFlags="scroll|snap" />
-
-            </com.google.android.material.tabs.TabLayout>
-
-        </LinearLayout>
+        </com.google.android.material.tabs.TabLayout>
 
         <TextView
             android:id="@+id/retryTitle"
@@ -100,7 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="631dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLiner"
+            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
             app:layout_constraintVertical_bias="1.0"
             tools:layout_editor_absoluteX="-16dp">
 
@@ -120,12 +116,12 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="48dp"
         android:clickable="true"
         android:contentDescription="@string/add_post_fab"
         android:focusable="true"
-        android:layout_gravity="bottom|end"
         app:srcCompat="@drawable/ic_add_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
