--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -22,8 +22,8 @@
             android:id="@+id/action_feedFragment_to_photoImageFragment"
             app:destination="@id/photoImageFragment" />
         <action
-            android:id="@+id/action_feedFragment_to_fragmentAuthen"
-            app:destination="@id/fragmentAuthen" />
+            android:id="@+id/action_feedFragment_to_authenFragment"
+            app:destination="@id/authenFragment" />
     </fragment>
     <fragment
         android:id="@+id/addEditPostFragment"
@@ -48,8 +48,8 @@
         android:label="fragment_photo_image"
         tools:layout="@layout/fragment_photo_image" />
     <fragment
-        android:id="@+id/fragmentAuthen"
-        android:name="ru.netology.FragmentAuthen"
-        android:label="fragment_authen"
-        tools:layout="@layout/fragment_authen" />
+        android:id="@+id/authenFragment"
+        android:name="ru.netology.AuthenFragment"
+        android:label="authen_fragment"
+        tools:layout="@layout/authen_fragment" />
 </navigation>
